# llm

./: .gitignore  CMakeLists.txt  README.md  data.csv  run.bat  run.sh
src/: chat_server_main.c  dataset_csv.c  dataset_csv.h  model_gru.c  model_gru.h  plot_png.c  plot_png.h  plot_svg.c  plot_svg.h  tokenizer_byte.c  tokenizer_byte.h  train_main.c  util.c  util.h
ui/: app.js  index.html
